--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 
 spring.jpa.hibernate.ddl-auto=update
 server.error.whitelabel.enabled=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
